# dota

./: .gitignore  Main.hs  dota.cabal
Dota/: WebAPI.hs
Dota/WebAPI/: Actions.hs  Parser.hs  Routes.hs  Types.hs
Dota/WebAPI/Types/: Basics.hs  GameModes.hs  Heroes.hs  League.hs  Match.hs  MatchHistory.hs  PicksBans.hs  Player.hs
src/Dota/: DatDota.hs  WebAPI.hs
src/Dota/WebAPI/: Actions.hs  Routes.hs  Types.hs
src/Dota/WebAPI/Types/: Basics.hs  GameModes.hs  Heroes.hs  Items.hs  League.hs  Match.hs  MatchHistory.hs  PicksBans.hs  Player.hs
test/: Main.hs  Tests.hs
test/Tests/: WebAPI.hs
test/Tests/WebAPI/: Types.hs
test/Tests/WebAPI/Types/: Heroes.hs  Items.hs  League.hs  MatchHistory.hs  Player.hs
test/json/: leagueListing.json  matchDetails.json  matchHistory.json  player.json
