name:                dota
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.6 && < 4.8,
    aeson,
    api-builder,
    bytestring,
    data-default,
    datetime,
    either,
    HTTP,
    http-conduit,
    text,
    transformers,
    vector
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:
    Dota.WebAPI
  ghc-options: -Wall
  hs-source-dirs: src/

executable dota
  main-is: Main.hs
  other-modules: 
  -- other-extensions:    
  build-depends: 
    base >= 4.6 && < 4.8,
    aeson,
    api-builder,
    bytestring,
    data-default,
    datetime,
    either,
    HTTP,
    http-conduit,
    text,
    transformers,
    vector
  hs-source-dirs:         src/
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
