name:                dota
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.6 && < 4.8,
    aeson,
    api-builder,
    bytestring,
    data-default,
    datetime,
    either,
    HTTP,
    http-conduit,
    text,
    transformers,
    vector
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  exposed-modules:
    Dota.WebAPI
    Dota.WebAPI.Actions
    Dota.WebAPI.Routes
    Dota.WebAPI.Types
    Dota.WebAPI.Types.Basics
    Dota.WebAPI.Types.GameModes
    Dota.WebAPI.Types.Heroes
    Dota.WebAPI.Types.Items
    Dota.WebAPI.Types.League
    Dota.WebAPI.Types.Match
    Dota.WebAPI.Types.MatchHistory
    Dota.WebAPI.Types.PicksBans
    Dota.WebAPI.Types.Player
  ghc-options: -Wall
  hs-source-dirs: src/

executable dota
  main-is: Main.hs
  other-modules: 
  -- other-extensions:    
  build-depends: 
    base >= 4.6 && < 4.8,
    dota
  hs-source-dirs:         ./
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test/
  main-is: Main.hs
  build-depends:
    base >= 4.6 && < 4.8,
    api-builder,
    bytestring,
    Cabal >= 1.18,
    directory,
    dota,
    HUnit
  default-language: Haskell2010
  ghc-options: -Werror -Wall
